# passwow

./: .coveragerc  .flake8  .gitignore  README.md  gui.spec  icon.icns  pyproject.toml
.github/workflows/: build-windows.yml  ci.yml
completions/: vault.bash
docs/: proyecto.txt  requisitos.txt
scripts/: benchmark.py
src/vault/: __init__.py  cli.py  crypto.py  gui.py  recovery.py  session.py  storage.py  vault.dat.checksum
tests/: test_add.py  test_bruteforce.py  test_changepw.py  test_delete_secure.py  test_export_formats.py  test_export_import.py  test_full_coverage.py  test_fuzzing.py  test_get.py  test_init.py  test_list.py  test_pwned.py  test_recovery.py  test_remove.py  test_session.py  test_storage.py
