[tool.poetry]
name = "vault"
version = "0.1.0"
description = "Gestor de contraseñas local y seguro"
authors = ["Javier González Casares <i12gocaj@uco.es>"]

[tool.poetry.scripts]
vault = "vault.cli:cli"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
cryptography = "^40.0"
click = "^8.0"
click-completion = "^0.5.0"
secretsharing = "^0.2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^6.1.1"
bandit = "^1.8.3"
flake8 = "^6.0.0"
black = "^23.3.0"
hypothesis = "^6.85.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"