[tool.poetry]
name = "vault"
version = "0.1.0"
description = "Gestor de contraseñas local y seguro"
authors = ["Javier González Casares <i12gocaj@uco.es>"]
license = "MIT"
homepage = "https://github.com/i12gocaj/passwow"
repository = "https://github.com/i12gocaj/passwow"
keywords = ["password", "vault", "security", "cli", "encryption", "macos", "gui"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Security :: Password Management",
    "Environment :: Console",
    "Environment :: MacOS X :: Cocoa",
    "Natural Language :: Spanish",
    "Natural Language :: English"
]

[tool.poetry.scripts]
vault = "vault.cli:cli"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
cryptography = "^40.0"
click = "^8.0"
click-completion = "^0.5.0"
secretsharing = "^0.2.6"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^6.1.1"
bandit = "^1.8.3"
flake8 = "^6.0.0"
black = "^23.3.0"
hypothesis = "^6.85.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"